netaddiction_website/static/src/scss/main.scss
.o_header_affix, #top {
    box-shadow: 0 2px 3px rgba(0, 0, 0, .2);
}
// TODO: use variable
h1, h2, h3, h4, h5, h6 {
    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}
h1, h2, h3 {
    color: #FF6600;
}
footer, body {
    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}
footer {
    color: #444444 !important;
    font-size: 12px;
    a {
        font-weight: bold;
        color: #FF6600;
    }
    a:hover {
        text-decoration: underline;
        color: #FF6600;
    }
}

#preheader {
    background-color: #333333;
    span > a.o_wsale_my_cart {
        color: #ffc120;
    }
    #top_menu {
        li:hover {
            background: none;
        }
        .nav-link {
            color: #ffc120;
        }
    }
}
#top_netaddiction_searchbar {
    form.s_wsale_products_searchbar_input {
        margin-bottom: 0px !important;
        .oe_search_box {
            border-top-left-radius: 50rem !important;
            border-bottom-left-radius: 50rem !important;
            border-right: 0 !important;
        }
        .oe_search_button {
            border-top-right-radius: 50rem !important;
            border-bottom-right-radius: 50rem !important;
            border-left: 0 !important;
            border-color: #ffc120;
            background: #ffc120;
        }
        .form-control:focus {
            box-shadow: none;
            border-color: #fff;
        }
    }
}
.netaddiction_snippet {
    .o_best_seller_slider, .s_wsale_products_recently_viewed {
        .o_carousel_product_card {
            border: none;
            .o_carousel_product_card_body {
                .o_currency_symbole {
                    color: #FF6600;
                    line-height: 27px;
                    .oe_currency_value {
                        vertical-align: text-top;
                        font-size: 27px;
                        font-weight: 700;
                    }
                }
                .js_add_cart {
                    color: #ffc120;
                }
            }
        }
    }
    .s_wsale_products_recently_viewed {
        h3 {
            text-align: left !important;
            margin-bottom: 0px !important;
        }
    }
}
#netaddictionCarousel {
    .carousel-control-prev, .carousel-control-next {
        width: 5%;
        opacity: 1;
    }
}

.orange-1 {
    color: #ffc120;
}
.white {
    color: #fff;
}
.header-row1 > .shopping-cart  {
    border-left: 1px solid #999;
    color: #fff;
    position: relative;
}
.container-dropdown .dropdown-profile {
    background-color: black;
    color: #fff;
}

.main_page div div {
    padding-top: 10px;
}
.menu-categorie:hover {
    .dropdown-menu {
        display: block;
    }
}
.navbar li:hover {
    background: #D3D3D3;

}
.navbar li:hover {
    .dropdown-menu {
        display: block;
    }
}
.header-row1 .nav-header-row1 {
    list-style: none;
    color: #fff;
    font-size: 12px;
    float: right;
    margin: 10px 0 15px 0;
    padding-left: 0;
    width: 100%;
    text-align: right;
}

.s_products_mostly_sold .s_wsale_products_recently_viewed {
    padding-top: 0 !important;
   & .carousel , .slider, .container {
        padding-top: 0;
    }

    & h3 {
        display: none;
    }
}
#products_grid_before {

    h4 {
        color: #FF6600;    
        font-weight: 400;
        padding-right: 15px;
        padding-left: 15px;
        border: 1px solid #efefef;
        margin-bottom: 0;
        padding-top: 5px;
    }
    .product_price_range_slider {
        p {
            padding-top: 5px;
        }
        input {
            width: 70%;
            margin-left: 40px;
        }
        .o_price_filter {
            border-top: 1px solid #ddd;
            margin-top: 40px;
            padding-top: 5px;
            color: #333;
            font-size: 12px;
        }
    }
    ul {
        padding: 0;
        margin-bottom: 0;
        li{
            border: 1px solid #efefef;
            list-style: none;
            padding: 5px;
            a {
                color: #444;
                padding: 5px 15px;
            }
            i {
                padding-right: 5px;
            }
        }
    }
}

@media (max-width: 500px) {
.carousel-inner .carousel-item {
    min-height: 0;
}
    .container-header {
        width: auto !important;
        & .header-row1 {
            width: auto !important;
        }
    }
    .row .header-row1 {
    & ul {
        margin-top: -18px;
        font-size: smaller;
        margin-left: inherit;
    }
    & a .logo{
        margin-top: -38px;
        margin-left: 16px;
    }
    & ul .li-shopping-cart
    {
        position: absolute;
        right: -18px;
        top: -5px;
    }
    & .li-shopping-cart, #open-offcanvans {
        font-size: 20px;

    }
}
}

